--- a/EfimovsCalendar/Content/Style/month.css
+++ b/EfimovsCalendar/Content/Style/month.css
@@ -1,6 +1,6 @@
 ﻿#calendar {
     visibility: hidden;
-    min-width: 80%;
+    width: calc(100% - 250px);
     min-height: 100%;
     background-color: white;
     display: flex;
@@ -20,7 +20,6 @@
         border-radius: 50px;
         margin-bottom: 4px;
     }
-
 
     #calendar .today {
         background-color: darkblue;
