--- a/EfimovsCalendar/Content/Style/sidebar.css
+++ b/EfimovsCalendar/Content/Style/sidebar.css
@@ -1,29 +1,32 @@
 ﻿#sideBar {
     visibility: hidden;
-    max-width: 250px;
+    width: 250px;
     border-right: solid 1px dimgray;
 }
 
 #microCalendar {
+    cursor: pointer;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     flex-wrap: wrap;
     align-items: flex-start;
     align-content: flex-start;
-    background-color: #ddeeff;
-    margin: 10px;
+    margin: 20px 20px;
 }
 
 .microItem {
-    width: 35px;
-    height: 35px;
-    margin: 3px 3px;
-    border-radius: 35px;
-    padding-top: 5px;
-    padding-left: 10px;
-    background-color: white;
-    border: lightgray 1px solid;
-    border-width: 1px 1px 0px 0px;
-    overflow-y: auto;
+    font-family: monospace;
+    font-weight: 600;
+    font-size: 9pt;
+    width: calc(100%/7);
+    text-align: center;
+    padding-top: 7px;
+    padding-bottom: 6px;
+    color: #555555;
+}
+
+.microItem:hover{
+    border-radius: 50px;
+    background-color: #eeeeee;
 }
